[tool.poetry]
name = "sumbaev-course-project-4"
version = "0.1.0"
description = ""
authors = ["m.sumbaev <sumbaevmaksim98@gmail.com>"]
readme = "README.md"
packages = [{include = "sumbaev_course_project_4"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
